# Cern-summer

./: .gitignore  README  \  out.aida  params1
2011-07-aida2yoda/: AUTHORS  ChangeLog  Doxyfile  Doxyfile.in  Makefile  Makefile.in  a.out  aclocal.m4  config.status  configure  configure.ac  index.dox  libtool  out  rivetenv.csh  rivetenv.sh
2011-07-aida2yoda/.svn/: dir-prop-base  entries
2011-07-aida2yoda/.svn/text-base/: ChangeLog.svn-base  Makefile.am.svn-base  rivetenv.csh.in.svn-base  rivetenv.sh.in.svn-base
2011-07-aida2yoda/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
2011-07-aida2yoda/autopackage/: data.apspec  default.apspec
2011-07-aida2yoda/autopackage/.svn/: dir-prop-base  entries
2011-07-aida2yoda/data/: Makefile  Makefile.am  Makefile.in  rivet-completion
2011-07-aida2yoda/data/.svn/: entries
2011-07-aida2yoda/data/anainfo/: ALEPH_1996_S3196992.info  ALEPH_1996_S3486095.info  ALICE_2010_S8625980.info  ATLAS_2010_S8591806.info  ATLAS_2010_S8894728.info  ATLAS_2010_S8919674.info  ATLAS_2010_S8994773.info  ATLAS_2011_S9002537.info  ATLAS_2011_S9019561.info  CDF_1990_S2089246.info  CDF_1996_S3108457.info  CDF_1997_S3541940.info  CDF_2000_S4155203.info  CDF_2001_S4563131.info  CDF_2002_S4796047.info  CDF_2004_S5839831.info  CDF_2005_S6080774.info  CDF_2005_S6217184.info  CDF_2006_S6653332.info  CDF_2007_S7057202.info  CDF_2008_NOTE_9351.info  CDF_2008_S7540469.info  CDF_2008_S7782535.info  CDF_2009_NOTE_9936.info  CDF_2009_S8233977.info  CDF_2009_S8383952.info  CDF_2010_S8591881_DY.info  CDF_2010_S8591881_QCD.info  CMS_2011_S8884919.info  D0_2000_S4480767.info  D0_2004_S5992206.info  D0_2006_S6438750.info  D0_2008_S6879055.info  D0_2008_S7554427.info  D0_2009_S8320160.info  D0_2009_S8349509.info  D0_2010_S8566488.info  D0_2010_S8570965.info  D0_2010_S8821313.info  DELPHI_2002_069_CONF_603.info  (+28 more)
2011-07-aida2yoda/data/plotinfo/: ATLAS_2010_S8894728.plot  ATLAS_2010_S8918562.plot  ATLAS_2011_S8924791.plot  CDF_1988_S1865951.plot  CDF_1997_S3541940.plot  CDF_2006_S6653332.plot  CDF_2008_LEADINGJETS.plot  CDF_2008_NOTE_9351.plot  CMS_2011_S8957746.plot  DELPHI_2003_WUD_03_11.plot  MC_GENERIC.plot  MC_HJETS.plot  MC_JETS.plot  MC_PHOTONJETS.plot  MC_ZJETS.plot  MC_ZZJETS.plot  Makefile  Makefile.am  Makefile.in  ZEUS_2001_S4815815.plot
2011-07-aida2yoda/data/refdata/: Makefile  Makefile.in
2011-07-aida2yoda/data/texmf/: Makefile  Makefile.am  Makefile.in
2011-07-aida2yoda/doc/: Makefile  Makefile.am  Makefile.in  bend.eps  make-plots.txt  mk-analysis-html  refs.bib  rivetversion.sty  warning.eps
2011-07-aida2yoda/doc/.svn/: dir-prop-base  entries
2011-07-aida2yoda/include/: Makefile  Makefile.in
2011-07-aida2yoda/include/.svn/: dir-prop-base  entries
2011-07-aida2yoda/include/LWH/: AIAxis.h  AIDataPointSet.h  AIMeasurement.h  AIProfile1D.h  AITreeFactory.h  Axis.h  DataPointSetFactory.h  Tree.h  TreeFactory.h
2011-07-aida2yoda/include/Rivet/: Analysis.fhh  AnalysisBuilder.hh  AnalysisHandler.fhh  BeamConstraint.hh  Cmp.hh  Constraints.hh  Event.hh  HistoFormat.hh  Makefile  Makefile.am  Makefile.in  Particle.fhh  Projection.fhh  ProjectionApplier.hh  ProjectionHandler.hh  RivetAIDA.hh  RivetSTL.hh
2011-07-aida2yoda/include/YODA/: .Bin1D.h.swo  .Bin2D.h.swo  Axis1D.h  Axis2D.h  Bin2D.h  Dbn2D.h  Histo2D.h  HistoBin2D.h  Point2D.h  Point3D.h  ReaderYODA.h  Scatter3D.h
2011-07-aida2yoda/m4/.svn/: all-wcprops  dir-prop-base  entries
2011-07-aida2yoda/pyext/: Makefile  Makefile.am  Makefile.in  lighthisto.py  setup.py  spiresbib.py
2011-07-aida2yoda/pyext/.svn/: dir-prop-base  entries
2011-07-aida2yoda/pyext/rivet/: Makefile  Makefile.in  __init__.py  rivetwrap.i
2011-07-aida2yoda/src/: Makefile  Makefile.in
2011-07-aida2yoda/src/.svn/: dir-prop-base  entries
2011-07-aida2yoda/src/Analyses/: ALEPH_1996_S3196992.cc  ALEPH_1996_S3486095.cc  ALICE_2010_S8624100.cc  ALICE_2010_S8625980.cc  ALICE_2010_S8706239.cc  ATLAS_2010_CONF_2010_049.cc  ATLAS_2010_S8591806.cc  ATLAS_2010_S8817804.cc  ATLAS_2010_S8894728.cc  ATLAS_2010_S8919674.cc  ATLAS_2011_CONF_2011_090.cc  ATLAS_2011_S8924791.cc  ATLAS_2011_S8971293.cc  ATLAS_2011_S8983313.cc  ATLAS_2011_S9002537.cc  BELLE_2006_S6265367.cc  CDF_1988_S1865951.cc  CDF_1993_S2742446.cc  CDF_1994_S2952106.cc  CDF_1996_S3418421.cc  CDF_1998_S3618439.cc  CDF_2000_S4155203.cc  CDF_2000_S4266730.cc  CDF_2001_S4517016.cc  CDF_2001_S4563131.cc  CDF_2001_S4751469.cc  CDF_2002_S4796047.cc  CDF_2004_S5839831.cc  CDF_2005_S6217184.cc  CDF_2006_S6450792.cc  CDF_2006_S6653332.cc  CDF_2007_S7057202.cc  CDF_2008_LEADINGJETS.cc  CDF_2008_NOTE_9351.cc  CDF_2008_S7540469.cc  CDF_2008_S7541902.cc  CDF_2008_S7782535.cc  CDF_2008_S8093652.cc  CDF_2008_S8095620.cc  CDF_2009_NOTE_9936.cc  (+68 more)
2011-07-aida2yoda/src/Core/: Analysis.cc  AnalysisHandler.cc  AnalysisInfo.cc  Cuts.cc  HistoHandler.cc  Makefile  Makefile.am  Makefile.in  Projection.cc  Run.cc  libRivetCore_la-AnalysisInfo.lo  libRivetCore_la-AnalysisLoader.lo  libRivetCore_la-Event.lo  libRivetCore_la-HistoHandler.lo  libRivetCore_la-Jet.lo  libRivetCore_la-Particle.lo  libRivetCore_la-ParticleName.lo  libRivetCore_la-Projection.lo  libRivetCore_la-ProjectionApplier.lo  libRivetCore_la-ProjectionHandler.lo  libRivetCore_la-Run.lo
2011-07-aida2yoda/src/Projections/: Beam.cc  BeamThrust.cc  CentralEtHCM.cc  ChargedFinalState.cc  ChargedLeptons.cc  DISKinematics.cc  FParameter.cc  FastJets.cc  FinalState.cc  FoxWolframMoments.cc  HadronicFinalState.cc  IdentifiedFinalState.cc  InitialQuarks.cc  JetAlg.cc  LeadingParticlesFinalState.cc  LeptonClusters.cc  Makefile  Makefile.in  MissingMomentum.cc  Multiplicity.cc  NeutralFinalState.cc  PVertex.cc  ParisiTensor.cc  Sphericity.cc  Spherocity.cc  Thrust.cc  TriggerCDFRun2.cc  UnstableFinalState.cc  VetoedFinalState.cc
2011-07-aida2yoda/src/Tools/: BinnedHistogram.cc  Logging.cc  Makefile  Makefile.in  RivetAIDA.cc
2011-07-aida2yoda/test/: Makefile  Makefile.in  testApi.cc  testMatVec.cc
2011-07-aida2yoda/test/.svn/: dir-prop-base  entries
yoda/yoda/trunk/: ChangeLog  Doxyfile  Doxyfile.in  TODO  (+8 more)
(+2963 files in other folders)
