pkginclude_HEADERS = \
    Exceptions.h  \
    AnalysisObject.h \
	Weights.h Bin.h Dbn1D.h \
	Axis1D.h Bin1D.h \
    Axis2D.h Bin2D.h \
    Histo1D.h HistoBin1D.h  \
    Histo2D.h HistoBin2D.h  \
    Profile1D.h ProfileBin1D.h \
    Scatter2D.h Point2D.h \
    Scatter3D.h Point3D.h \
    Writer.h WriterAIDA.h WriterYODA.h \
    Reader.h ReaderAIDA.h ReaderYODA.h

nobase_pkginclude_HEADERS = \
	WriterMethods.icc \
	Utils/MathUtils.h \
	Utils/sortedvector.h \
    Utils/cachedvector.h \
	Utils/nvector.h \
	Config/YodaConfig.h \
	Config/BuildConfig.h
